# chatr

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: events.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: mod.rs  server.rs  websocket.rs
src-tauri/src/api/routes/: channels.rs  dms.rs  emoji.rs  files.rs  friends.rs  identity.rs  messaging.rs  mod.rs  moderation.rs  notifications.rs  peers.rs  roles.rs  rooms.rs  settings.rs  voice.rs
src-tauri/src/commands/: identity.rs  messaging.rs  mod.rs  rooms.rs  voice.rs
src-tauri/src/db/: messages.rs  mod.rs  rooms.rs
src-tauri/src/media/: audio.rs  codec.rs  engine.rs  frame_server.rs  mod.rs  peer.rs  screen.rs  video.rs
src-tauri/src/models/: mod.rs
src-tauri/src/network/: behaviour.rs  bootstrap.rs  mod.rs  swarm.rs
src-tauri/src/services/: channels.rs  dms.rs  emoji.rs  files.rs  friends.rs  identity.rs  messaging.rs  mod.rs  moderation.rs  notifications.rs  peers.rs  roles.rs  rooms.rs  search.rs  settings.rs
src/components/chat/: MessageDateDivider.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx
src/components/common/: IconButton.tsx  Modal.tsx  Tooltip.tsx
src/components/dms/: DmPanel.tsx
src/components/friends/: FriendsPanel.tsx
src/components/identity/: SetupScreen.tsx
src/components/layout/: AppLayout.tsx  ChannelSidebar.tsx  (+3 more)
src/lib/: api.ts  e2ee-transform.ts  tauri.ts  types.ts
src/stores/: chatStore.ts  identityStore.ts  messageStore.ts  peerStore.ts  viewStore.ts  voiceStore.ts
(+11 files in other folders)
